fix(csp): mark inline imports as module

--- a/src/components/AccountButton.astro
+++ b/src/components/AccountButton.astro
@@ -50,7 +50,7 @@ const cspNonce = Astro.locals?.cspNonce;
   </details>
 </div>
 
-<script nonce={cspNonce}>
+<script type="module" nonce={cspNonce}>
   import { getSupabaseBrowserClient } from '@lib/supabaseBrowser';
 
   /** @type {HTMLElement | null} */
